# mis-eventos

./: .env.api.example  .gitignore  README.md  docker-compose.yml  run.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/.agents/skills/application-layer/: SKILL.md
backend/.agents/skills/application-layer/templates/: command.py.tmpl  command_handler.py.tmpl  query.py.tmpl  query_handler.py.tmpl  service.py.tmpl
backend/.agents/skills/domain-layer/: SKILL.md
backend/.agents/skills/domain-layer/templates/: aggregate_root.py.tmpl  domain_error.py.tmpl  repository.py.tmpl  value_object.py.tmpl
backend/.agents/skills/infrastructure-persistence/: SKILL.md
backend/.agents/skills/infrastructure-persistence/templates/: in_memory_repository.py.tmpl  mongo_repository.py.tmpl  mongo_view_repository.py.tmpl
backend/.agents/skills/module-scaffolding/: SKILL.md
backend/.agents/skills/testing-unit/: SKILL.md
backend/.agents/skills/views-module/: SKILL.md
backend/scripts/: bootstrap.py  entrypoint.sh  migrate.py  seed.py
backend/src/apps/api/: app.py  dependencies.py  exception_handlers.py
backend/src/apps/api/config/: __init__.py  (+1 more)
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth_rate_limit.py  test_auth_routes.py  test_cached_event_view_repository.py  test_e2e_flow.py  test_event_sessions_routes.py  test_events_routes.py  test_registration_concurrency.py  test_registrations_routes.py  test_role_views_routes.py  test_user_views_routes.py  test_users_routes.py
backend/tests/unit/modules/: _fakes.py
(+347 files in other folders)
