[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mis-eventos"
version = "0.1.0"
description = "Mis Eventos"
authors = [{ name = "brgarcia" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "pymongo>=4.17.0",
    "pydantic>=2.12.0",
    "pydantic[email]>=2.12.0",
    "bcrypt>=5.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-dotenv>=1.2.2",
    "redis>=5.1.0",
    "python-multipart>=0.0.27",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "httpx>=0.27",
    "mongomock>=4.1",
    "fakeredis>=2.23",
    "ruff>=0.5",
    "black>=24.4",
]

[tool.poetry]
package-mode = false
packages = [
    { include = "apps", from = "src" },
    { include = "modules", from = "src" },
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --strict-markers --cov=src/modules --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/__pycache__/*", "*/tests/*", "src/modules/**/infrastructure/**/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 2

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.black]
line-length = 110
target-version = ["py311"]
